<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_menu_content_top_height">

        <RelativeLayout
            android:id="@+id/rlayout_menu_cover"
            android:layout_width="@dimen/dimens_menu_content_img_height"
            android:layout_height="@dimen/dimens_menu_content_img_height"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/dimens_menu_content_img_maginleft">

            <ImageView
                style="@style/styles_match_parent"
                android:src="@drawable/img_menu_cover" />

            <TextView
                android:id="@+id/txt_playcount"
                style="@style/styles_wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="@dimen/adapter_item_play_maginright"
                android:layout_marginTop="@dimen/adapter_item_desc_maginleft"
                android:text="271"
                android:textColor="@color/color_bg_white"
                android:textSize="@dimen/common_sz_9" />

            <ImageView
                style="@style/styles_wrap_content"
                android:layout_alignTop="@id/txt_playcount"
                android:layout_marginRight="@dimen/adapter_item_play_paddingright"
                android:layout_toLeftOf="@id/txt_playcount"
                android:src="@drawable/img_chatlist_item_playcount" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/dimens_menu_content_desc_width"
            android:layout_height="@dimen/dimens_menu_content_desc_height"
            android:layout_alignTop="@id/rlayout_menu_cover"
            android:layout_marginLeft="@dimen/dimens_menu_content_desc_maginleft"
            android:layout_toRightOf="@id/rlayout_menu_cover"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_menu_name"
                style="@style/styles_wrap_content"
                android:layout_marginTop="@dimen/dimens_menu_name_magintop"
                android:textColor="@color/color_bg_top_white"
                android:textSize="@dimen/common_sz_16" />

            <LinearLayout
                android:id="@+id/llayout_author"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_menu_author_height"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_author"
                    android:layout_width="@dimen/dimens_menu_author_img_height"
                    android:layout_height="@dimen/dimens_menu_author_img_height"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/img_menu_author" />

                <TextView
                    android:id="@+id/txt_author"
                    style="@style/styles_wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimens_menu_author_img_maginright"
                    android:textColor="@color/color_gray_text"
                    android:textSize="@dimen/common_sz_15" />

                <ImageView
                    style="@style/styles_wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimens_menu_author_arrows_maginright"
                    android:src="@drawable/img_menu_author_arrows" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_menu_content_bottom_height"
        android:layout_marginTop="@dimen/dimens_menu_content_padding"
        android:orientation="horizontal">

        <LinearLayout
            style="@style/MenuFunction"
            android:layout_marginLeft="@dimen/dimens_menu_function_magin"
            >
            <ImageView
                style="@style/MenuFunctionIcon"
                android:src="@drawable/img_collect"
                />
            <TextView
                android:id="@+id/txt_collect"
                style="@style/MenuFunctionText"
                android:hint="@string/menu_func_collect_str"
                />
        </LinearLayout>

        <LinearLayout
            style="@style/MenuFunction"
            android:layout_marginLeft="@dimen/dimens_menu_function_padding"
            >
            <ImageView
                style="@style/MenuFunctionIcon"
                android:src="@drawable/img_collect"
                />
            <TextView
                android:id="@+id/txt_criticism"
                style="@style/MenuFunctionText"
                android:hint="@string/menu_func_criticism_str"
                />
        </LinearLayout>

        <LinearLayout
            style="@style/MenuFunction"
            android:layout_marginLeft="@dimen/dimens_menu_function_padding"
            >
            <ImageView
                style="@style/MenuFunctionIcon"
                android:src="@drawable/img_collect"
                />
            <TextView
                android:id="@+id/txt_share"
                style="@style/MenuFunctionText"
                android:hint="@string/menu_func_share_str"
                />
        </LinearLayout>

        <LinearLayout
            style="@style/MenuFunction"
            android:layout_marginLeft="@dimen/dimens_menu_function_padding"
            >
            <ImageView
                style="@style/MenuFunctionIcon"
                android:src="@drawable/img_collect"
                />
            <TextView
                android:id="@+id/txt_download"
                style="@style/MenuFunctionText"
                android:hint="@string/menu_func_download_str"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>